<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imv_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d10"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/font_size_15"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:text="@string/welcome"/>
    <ImageView
        android:id="@+id/imv_navi_back"
        android:layout_width="@dimen/d30"
        android:layout_height="@dimen/d30"
        android:layout_margin="@dimen/d10"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_close"/>
    <LinearLayout
        android:layout_width="@dimen/d250"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/d50"
        android:layout_marginLeft="@dimen/d15"
        android:layout_marginRight="@dimen/d15"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:textAlignment="center"
            android:inputType="text"
            android:textCursorDrawable="@null"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_color"
            android:backgroundTint="@color/hint_color"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/d12" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_color"
            android:backgroundTint="@color/hint_color"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/d12" />
        <Button
            android:id="@+id/btn_login"
            android:background="@drawable/button_custom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/d30"
            android:textColor="@android:color/white"
            android:text="@string/login" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d30"
            android:gravity="center"
            android:text="@string/forgot_pass"
            android:textColor="@color/hint_color"
            android:textSize="@dimen/font_size_13" />

    </LinearLayout>

</RelativeLayout>